--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
